[package]
name = "xtool"
version = "0.0.10"
edition = "2024"
description = "Amazing Tools"
documentation = "https://docs.rs/xtool"
keywords = ["amazing", "tools", "xtool"]
categories = ["command-line-utilities", "development-tools"]
authors = [ "Debin <luodeb@outlook.com>" ]
license = "Apache-2.0"
homepage = "https://github.com/rslabbox/xtool.git"
repository = "https://github.com/rslabbox/xtool.git"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
humantime-serde = "1.1"
serialport = "4.8"
tokio-serial = "5.4"
crossterm = "0.29"
dialoguer = "0.12.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
tempfile = "3.12"
walkdir = "2.5"
zip = "7.2.0"
tiny_http = "0.12"
mime_guess = "2.0"
urlencoding = "2.1"
qiniu-upload-token = "0.2.4"
qiniu-sdk = { version = "0.2.4", features = ["upload", "credential", "ureq"] }

[dev-dependencies]
serial_test = "3.2"

[workspace]
members = ["server"]
