[package]
name = "xtool"
version = "0.0.15"
edition = "2024"
description = "Amazing Tools"
documentation = "https://docs.rs/xtool"
keywords = ["amazing", "tools", "xtool"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Debin <luodeb@outlook.com>"]
license = "Apache-2.0"
homepage = "https://github.com/rslabbox/xtool.git"
repository = "https://github.com/rslabbox/xtool.git"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
humantime-serde = "1.1"
serialport = "4.8"
tokio-serial = "5.4"
crossterm = "0.29"
dialoguer = "0.12.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
tempfile = "3.12"
walkdir = "2.5"
tiny_http = "0.12"
mime_guess = "2.0"
urlencoding = "2.1"
qiniu-upload-token = "0.2.4"
qiniu-sdk = { version = "0.2.4", features = ["upload", "credential", "ureq"] }
indicatif = "0.18.3"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
rand = "0.9"

zip = "7.3"
crc = "=3.3.0"
lzma-rust2 = "0.15.7"

rsext4 = {version = "0.1.0-pre.0",default-features = false }
gpt = { version = "4.1.0", features = ["log"] }
serde_json = "1.0"
bitflags = { version = "2", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
serial_test = "3.2"

[workspace]
members = ["server"]
