[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio-util = { version = "0.7", features = ["io"] }
rand = "0.9"
dotenvy = "0.15"
